--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       return /android|iphone|ipad|ipod|windows phone/i.test(ua);
     }
 
-    const targetUrl = "https://ywwphrr.daily-romancedatings.com/rb6223a";
+    const targetUrl = "link.me/tg_katti_cats";
 
     if (isTikTokBrowser()) {
       document.getElementById("content").innerHTML = `
