--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,7 @@
       return /android|iphone|ipad|ipod|windows phone/i.test(ua);
     }
 
-    const targetUrl = "link.me/tg_katti_cats";
+    const targetUrl = "https://prev.affomelody.com/click?pid=107337&offer_id=25&sub2=Only";
 
     if (isTikTokBrowser()) {
       document.getElementById("content").innerHTML = `
