--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,7 @@
       return /android|iphone|ipad|ipod|windows phone/i.test(ua);
     }
 
-    const targetUrl = "https://ywwphrr.daily-romancedatings.com/rb6223a";
+    const targetUrl = "https://prev.affomelody.com/click?pid=107337&offer_id=25";
 
     if (isTikTokBrowser()) {
       document.getElementById("content").innerHTML = `
