--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Переход...</title>
+
   <style>
     body {
       margin: 0;
@@ -10,18 +12,28 @@
       background: #000;
       color: #fff;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       font-family: sans-serif;
       text-align: center;
+      overflow: hidden;
     }
+
     img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    .pc img {
       max-width: 90%;
       height: auto;
+      object-fit: contain;
     }
-    p {
+
+    .pc p {
       max-width: 90%;
     }
   </style>
@@ -31,6 +43,7 @@
 
   <script>
     const ua = navigator.userAgent.toLowerCase();
+    const targetUrl = "https://prev.affomelody.com/click?pid=107337&offer_id=25";
 
     function isTikTokBrowser() {
       return ua.includes("tiktok") || ua.includes("musical");
@@ -40,23 +53,21 @@
       return /android|iphone|ipad|ipod|windows phone/i.test(ua);
     }
 
-    const targetUrl = "https://prev.affomelody.com/click?pid=107337&offer_id=25";
-
     if (isTikTokBrowser()) {
+      // TikTok — только картинка
       document.getElementById("content").innerHTML = `
         <img src="open_browser2.jpg" alt="Open in browser">
-        <p>If the link doesn't open, copy and paste it in the browser.</p>
       `;
-      setTimeout(() => {
-        window.location.href = targetUrl;
-      }, 3000);
     } else if (isMobile()) {
+      // Обычный мобильный браузер — редирект
       window.location.href = targetUrl;
     } else {
-      // На ПК — заглушка с фоткой
+      // ПК — заглушка
       document.getElementById("content").innerHTML = `
-        <img src="pc_placeholder.jpg" alt="Welcome">
-        <p>Добро пожаловать!</p>
+        <div class="pc">
+          <img src="pc_placeholder.jpg" alt="Welcome">
+          <p>Добро пожаловать!</p>
+        </div>
       `;
     }
   </script>
